[metadata]
name=ChitraPy
version=0.0.3
url=https://github.com/mgautam98/ChitraPy
author=Gautam Mishra
author_email=mishragautam96@gmail.com
description=Digital Image Processing Library.
long_description=file:README.md
long_description_content_type=text/markdown
license=GNU General Public License v3 (GPLv3)
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe=true
install_requires=
    numpy
    matplotlib
    numba
packages=find:

[options.packages.find]
exclude =
    tests
    examples
